Se ha completado la seccion datos

--- a/css/luis.css
+++ b/css/luis.css
@@ -280,3 +280,28 @@ img.img-position2 {
     font-size: 1.2em;
     margin-bottom: 15px;
 }
+
+/*------------Seccion Datos--------------*/
+section.datos {
+    background-image: url(../img/MisProductos/background1.png);
+    background-position: center center;
+    padding: 50px 0;
+    height: 400px;
+}
+
+section.datos p.frase, section.datos p span{
+    text-shadow: 0 0 5px black;
+    font-size: 2.5em;
+    font-weight: bold;
+}
+
+section.datos p.frase {
+    color: orange;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+section.datos p span {
+    color: white;
+    text-transform: none;
+}
