--- a/css/luis.css
+++ b/css/luis.css
@@ -10,28 +10,47 @@ header.header {
     background-position: center center;
 }
 
-/*Redes*/
-.redes {
-    margin-bottom: 20px;
-}
-
-.redes img{
-    width: 35px;
-    margin: 0 20px;
-}
-
-a.name{
-    width: 23%;
-    font-size: 2em;
-    color: orange;
-    text-transform: lowercase;
-}
-
 /*Resaltador*/
 i.frase, .resaltador {
     color: #8dc7e0;
 }
 
+/*Color orange*/
+div.name a,
+.content-whoami .first-hgroup-whoami h1,.content-whoami .second-hgroup-whoami h1,
+.adicional hgroup h1, section.adicional hgroup h2,
+.thanks {
+    color: orange;
+}
+
+/*Parrafos en general*/
+.parrafo {
+    width: 80%;
+    font-size: 1.2em;
+    margin-bottom: 15px;
+}
+
+/*Redes*/
+div.social-network {
+    margin-bottom: 10px;
+}
+
+div.social-network a {
+    margin-right: 30px;
+}
+
+div.social-network a:nth-child(3) {
+    margin-right: 0;
+}
+
+div.name a{
+    font-size: 1.6em;
+}
+
+
+/*--------------------------------------------*
+/*--------------------------------------------*
+/*--------------------------------------------*
 
 /*Encabezado de la pagina Blog*/
 .blogHeader {
@@ -242,12 +261,7 @@ img.img-position2 {
 }
 
 /*hgroups*/
-.content-whoami .first-hgroup-whoami h1,
-.content-whoami .second-hgroup-whoami h1 {
-    color: orange;
-}
-
-.first-hgroup-whoami h1 {
+.first-hgroup-whoami h1,.adicional hgroup h1{
     font-size: 3em;
     text-transform: uppercase;
     margin: 8vh auto 2vh auto;
@@ -273,13 +287,11 @@ img.img-position2 {
 	margin-left: 10vh;
 }
 
-/*content-whoami*/
-.content-whoami p.parrafo {
-    width: 80%;
+/*Content*/
+section.whoami p.parrafo {
     color: white;
-    font-size: 1.2em;
-    margin-bottom: 15px;
 }
+
 
 /*------------Seccion Datos--------------*/
 section.datos {
@@ -314,4 +326,38 @@ section.relleno {
 section.relleno p {
     text-align: justify;
     font-size: 1.2em;
+}
+
+/*------------addicional-----------*/
+section.adicional {
+    background-image: url(../img/MisProductos/background2.png);
+    height: 120vh;
+    background-position: center left;
+    margin-bottom: 40px;
+}
+
+section.adicional hgroup h1 {
+    margin-top: 4vh;
+    margin-bottom: 10px;
+}
+
+section.adicional hgroup h2 {
+    margin-top: 0;
+    font-size: 1.3em;
+}
+
+section.adicional p {
+    width: 80%;
+    font-size: 1.2em;
+    margin-bottom: 15px;
+}
+
+section.adicional p.manuel {
+}
+
+/*thanks*/
+.thanks {
+    font-size: 2.4em;
+    text-transform: uppercase;
+    margin-bottom: 30px;
 }
