--- a/css/luis.css
+++ b/css/luis.css
@@ -10,17 +10,14 @@ header.header {
     position: relative;
 }
 
+.header-main h2 {
+    letter-spacing: 10px;
+    text-transform: uppercase;
+}
+
 /*Resaltador*/
 i.frase, .resaltador {
     color: #8dc7e0;
-}
-
-/*Color orange*/
-header#indexMyProducts .frase p, div.name a,
-.content-whoami .first-hgroup-whoami h1,.content-whoami .second-hgroup-whoami h1,
-.adicional hgroup h1, section.adicional hgroup h2,
-.thanks {
-    color: orange;
 }
 
 /*Parrafos en general*/
@@ -65,14 +62,12 @@ div.name a{
 }
 
 /*titulos*/
-.header-main h2 {
+header.header-main h2 {
     width: 105%;
     margin-bottom: 15px;
-    letter-spacing: 10px;
-    text-transform: uppercase;
 }
 
-.header-main h3 {
+header.header-main h3 {
     width: 105%;
     color: #8dc7e0;
     text-transform: capitalize;
@@ -130,14 +125,17 @@ div.name a{
 
 .read-more {
     width: 80%;
-    top: -35px;
-    left: 200%;
     padding: 2px 3px 2px 4px;
     border: 4px solid orange;
     color: orange;
     font-weight: bold;
     text-transform: uppercase;
     transition: .3s ease .1s;
+}
+
+.readmoreMoved {
+    top: -35px;
+    left: 200%;
 }
 
 .read-more:hover {
@@ -213,164 +211,32 @@ div.name a{
     color: gray;
 }
 
-/*-------------FOOTER MAIN----------*/
+/*-------------------------------------------*/
+/*-------------Mis Productos-----------------*/
+/*-------------------------------------------*/
 
-/*----------------------------------------------------*/
-/*-----------------Mis Productos----------------------*/
-/*----------------------------------------------------*/
-
-/*-----------------Header----------------------------*/
-header#indexMyProducts {
-    height: 100vh;
-    max-height: 120vh;
-    background-image: url(../img/MisProductos/background-header.png);
+/*--------------Header--------------*/
+#myProductsHeader {
+    background-image: url(../img/MisProductos/background-book.png);
+    height: 500px;
 }
 
-header#indexMyProducts .frase {
-    position: absolute;
-    bottom: 25vh;
-    left: 35vh;
+.tittle-header {
+    height: calc(100% - 100px);
 }
 
-header#indexMyProducts .frase p {
+.tittle-header h2 {
     text-transform: uppercase;
-    font-size: 3em;
-    text-shadow: 0 0 5px black;
 }
 
-header#indexMyProducts .frase p.cite{
-    font-size: 2.3em;
+.tittle-header h3 {
+    font-size: 1.9em;
+    line-height: 50px;
 }
 
-header#indexMyProducts .social-networks {
-    position: absolute;
-    bottom: 0;
-    left: 35vh;
-}
-
-/*---------------------Main Mis Productos---------------------*/
-/*-------Seccion - Quien soy---------*/
-section.whoami {
-    background-color: black;
-    position: relative;
-    height: 1100px;
-    max-height: 1150px;
-}
-
-/*Imagen*/
-img.img-position1,img.img-position2 {
-	position: absolute;
-	width: 33%;
-}
-
-img.img-position1 {
-	top: 50px;
-	left: 150px;
-}
-
-img.img-position2 {
-	bottom: 0;
-	right: 150px;
-}
-
-/*hgroups*/
-.first-hgroup-whoami h1,.adicional hgroup h1{
-    font-size: 3em;
-    text-transform: uppercase;
-    margin: 8vh auto 2vh auto;
-}
-
-.first-hgroup-whoami h2 {
-    color:white;
-    text-transform: initial;
-    font-size: 1.5em;
-    margin: 0 auto 4vh auto;
-}
-
-.second-hgroup-whoami h1 {
-	width: 75%;
-	margin-left: 10vh;
-	font-size: 3em;
-	text-align: left;
-}
-
-.second-hgroup-whoami h1 span.resaltador {
-	letter-spacing: 5px;
-	font-size: .8em;
-	margin-left: 10vh;
-}
-
-/*Content*/
-section.whoami p.parrafo {
-    color: white;
-}
-
-
-/*------------Seccion Datos--------------*/
-section.datos {
-    background-image: url(../img/MisProductos/background1.png);
-    background-position: center center;
-    padding: 50px 0;
-    height: 400px;
-}
-
-section.datos p.frase, section.datos p span{
-    text-shadow: 0 0 5px black;
-    font-size: 2.5em;
-    font-weight: bold;
-}
-
-section.datos p.frase {
-    color: orange;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
-
-section.datos p span {
-    color: white;
-    text-transform: none;
-}
-
-/*------------Seccion relleno-----------*/
-section.relleno {
-    padding: 50px 0 10px 0;
-}
-
-section.relleno p {
-    text-align: justify;
-    font-size: 1.2em;
-}
-
-/*------------addicional-----------*/
-section.adicional {
-    background-image: url(../img/MisProductos/background2.png);
-    height: 120vh;
-    background-position: center left;
-    margin-bottom: 40px;
-}
-
-section.adicional hgroup h1 {
-    margin-top: 4vh;
-    margin-bottom: 10px;
-}
-
-section.adicional hgroup h2 {
-    margin-top: 0;
-    font-size: 1.3em;
-}
-
-section.adicional p {
-    width: 80%;
-    font-size: 1.2em;
-    margin-bottom: 15px;
-}
-
-section.adicional p.manuel {
-}
-
-/*thanks*/
-.thanks {
-    font-size: 2.4em;
-    text-transform: uppercase;
-    margin-bottom: 30px;
+/*Read More*/
+.book-read-more {
+    top: 20px;
+    left: 50%;
+    
 }
