--- a/css/luis.css
+++ b/css/luis.css
@@ -3,76 +3,51 @@
     margin: 0;
     padding: 0;
 }
-
 /*Header de la pagina*/
 header.header {
     background-position: center center;
     position: relative;
 }
-
 .header-main h2 {
     letter-spacing: 10px;
     text-transform: uppercase;
 }
-
-/*Resaltador*/
-i.frase, .resaltador {
-    color: #8dc7e0;
-}
-
-/*Parrafos en general*/
-.parrafo {
-    width: 80%;
-    font-size: 1.2em;
-    margin-bottom: 15px;
-}
-
 /*Redes*/
 div.social-network {
     margin-bottom: 10px;
 }
-
 div.social-network a {
     margin-right: 30px;
 }
-
 div.social-network a:nth-child(3) {
     margin-right: 0;
 }
-
 div.name a{
     font-size: 1.6em;
 }
-
-
 /*--------------------------------------------*
 /*--------------------------------------------*
 /*--------------------------------------------*
-
 /*Encabezado de la pagina Blog*/
 #blogHeader {
     height: 70vh;
     background-image: url(../img/Blog/Capa\ 1.png);
 }
-
 /*------------Principal----------------*/
 /*Header Main*/
 .header-main {
     margin-bottom: 10vh;
 }
-
 /*titulos*/
 header.header-main h2 {
     width: 105%;
     margin-bottom: 15px;
 }
-
 header.header-main h3 {
     width: 105%;
     color: #8dc7e0;
     text-transform: capitalize;
 }
-
 /*--------------Contenido Principal-----------------*/
 /*Titulo de seccion*/
 .content-section h2.title-section {
@@ -82,18 +57,15 @@ header.header-main h3 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
-
 /*Contenido de la seccion*/
 .content-section p{
     font-size: 1.2em;
     line-height: 1em;
 }
-
 /*Tags Sections*/
 .content-section .tags {
     margin: 10px 0;
 }
-
 .content-section .tags .tag {
     color: #8dc7e0;
     margin: 0 5px;
@@ -103,13 +75,11 @@ header.header-main h3 {
     border-radius: 50%;
     transition: .3s ease .1s;
 }
-
 .tags .tag:hover {
     background-color: #8dc7e0;
     color: gray!important;
     cursor: pointer;
 }
-
 /*Footer section*/
 .content-section .footer-section {
     position: absolute;
@@ -118,11 +88,9 @@ header.header-main h3 {
 .footer-section p {
     position: relative;
 }
-
 .autor {
     margin-bottom: 3px;
 }
-
 .read-more {
     width: 80%;
     padding: 2px 3px 2px 4px;
@@ -132,71 +100,57 @@ header.header-main h3 {
     text-transform: uppercase;
     transition: .3s ease .1s;
 }
-
 .readmoreMoved {
     top: -35px;
     left: 200%;
 }
-
 .read-more:hover {
     background-color: orange;
     color: white;
+    cursor: pointer;
 }
-
 /*----------------Filtros de contenido--------------------*/
 .filters {
     width: 100%;
 }
-
 .filters .filter-title {
     font-size: 1.5em;
     margin: 0;
     margin-bottom: 3vh;
 }
-
 .filters a.btn-filter {
     width: 75%;
     margin-bottom: 3px;
     background-color: #8dc7e0;
 }
-
 .filters a.btn-filter:nth-child(4) {
     margin-bottom: 10px;
 }
-
 /*-------------Resto del contenido--------------*/
 .secundario {
     padding: 5vh;
 }
-
 .secundario:nth-child(2n) {
     background-color: #fff2db;
 }
-
 .secundario section img.image-section {
     width: 30%;
 }
-
 .secundario h2.title-section {
     margin-left: 10px;
 }
-
 .secundario .footer-section p.read-more {
     left: 250%;
 }
-
-
 /*-------------------Pagination----------------*/
 .pagination a.active {color: #b3e8ff;}
 .pagination a:not(.active){
     color:gray;
 }
-
 .pagination {
     background-color: white;
     margin-bottom: 40px;
 }
-
 .pagination a{
     color: #8dc7e0;
     padding: 8px 16px;
@@ -205,38 +159,34 @@ header.header-main h3 {
     border-radius: 40%;
     font-size: 1.3em;
 }
-
 .pagination a:hover {
     background-color: #8dc7e0;
     color: gray;
 }
-
 /*-------------------------------------------*/
 /*-------------Mis Productos-----------------*/
 /*-------------------------------------------*/
-
 /*--------------Header--------------*/
 #myProductsHeader {
     background-image: url(../img/MisProductos/background-book.png);
     height: 500px;
 }
-
 .tittle-header {
     height: calc(100% - 100px);
 }
-
 .tittle-header h2 {
     text-transform: uppercase;
 }
-
 .tittle-header h3 {
     font-size: 1.9em;
     line-height: 50px;
 }
-
+/*seccion de libros (por filas)*/
+.section-books {
+    margin-bottom: 15vh;
+}
 /*Read More*/
 .book-read-more {
     top: 20px;
     left: 50%;
-    
 }
